# yesvgmap

./: .gitignore  CREDITS.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yaml
release/: yesvgmap_0.0.1-1_amd64.deb  yesvgmap_0.0.2-1_amd64.deb  yesvgmap_0.0.3-1_amd64.deb  yesvgmap_0.0.4-1_amd64.deb  yesvgmap_0.1.0-1_amd64.deb  yesvgmap_0.1.1-1_amd64.deb  yesvgmap_0.1.2-1_amd64.deb  yesvgmap_0.1.3-1_amd64.deb  yesvgmap_0.1.4-1_amd64.deb  yesvgmap_0.1.5-1_amd64.deb  yesvgmap_0.1.6-1_amd64.deb
release/completions/: yesvgmap.bash
release/man/: yesvgmap.1
src/: error.rs  img.rs  main.rs  sprite.rs
src/parse/: mod.rs  spec.rs
yesvgmap/: Cargo.toml
yesvgmap/src/: main.rs
