[package]
name = "yesvgmap"
version = "0.2.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "Yesvgmap is a CLI tool for building SVG sprite maps from individual SVG images."
repository = "https://github.com/Blobfolio/yesvgmap"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2021, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
revision = "1"
depends = "libc6 (>= 2.18), libgcc1 (>= 1:4.2) | libgcc-s1 (>= 4.2)"
section = "utility"
assets = [
    ["./target/x86_64-unknown-linux-gnu/release/yesvgmap", "usr/bin/", "755"],
    ["./release/completions/yesvgmap.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/yesvgmap.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Yesvgmap"
bash-dir = "./release/completions"
man-dir = "./release/man"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
long = "--hidden"
description = "Hide with the 'hidden' attribute. Overrides --offscreen if both are set."

[[package.metadata.bashman.switches]]
long = "--offscreen"
description = "Hide by placing the element offscreen with inline styles."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print application version."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read file paths from this text file."
path = true

[[package.metadata.bashman.options]]
long = "--map-class"
description = "A class attribute value to assign to the map itself. [default: ]"
label = "<CLASS>"

[[package.metadata.bashman.options]]
long = "--map-id"
description = "An ID attribute value to assign to the map itself. [default: ]"
label = "<ID>"

[[package.metadata.bashman.options]]
short = "-o"
long = "--output"
description = "A file path to save the generated map to. If not specified, the map will print to STDOUT."
label = "<FILE>"
path = true

[[package.metadata.bashman.options]]
short = "-p"
long = "--prefix"
description = "Symbols will be assigned the ID 'prefix-basename'. [default: icon]"
label = "<PREFIX>"

[[package.metadata.bashman.arguments]]
label = "<SVG(s)…>"
description = "Any number of files and directories to crawl and crunch."

[dependencies]
argyle = "0.4.*"
dactyl = "0.1.*"
dowser = "0.2.*"
fyi_msg = "0.8.*"
once_cell = "1.8.*"
regex = "1.5.*"
write_atomic = "0.1.*"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
