[package]
name = "yesvgmap"
version = "0.5.10"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "Generate SVG sprite maps from individual SVG images."
repository = "https://github.com/Blobfolio/yesvgmap"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <josh@blobfolio.com>"
copyright = "2025, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "graphics"
extended-description = ""
assets = [
    ["./target/release/yesvgmap", "usr/bin/", "755"],
    ["./release/completions/yesvgmap.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/yesvgmap.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Yesvgmap"
bash-dir = "./release/completions"
man-dir = "./release/man"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
long = "--hidden"
description = "Hide the map using the 'hidden' HTML attribute. This takes priority over --offscreen when both are present."

[[package.metadata.bashman.switches]]
long = "--offscreen"
description = "Hide the map using inline styles to position it offscreen."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print version information and exit."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) file and/or directory paths from this text file — or STDIN if '-' — one entry per line, instead of or addition to (actually trailing) <PATH(S)>."
path = true

[[package.metadata.bashman.options]]
long = "--map-class"
description = "Add this class to the generated SVG map. [default: ]"
label = "<CLASS>"

[[package.metadata.bashman.options]]
long = "--map-id"
description = "Add this ID to the generated SVG map. [default: ]"
label = "<ID>"

[[package.metadata.bashman.options]]
short = "-o"
long = "--output"
description = "Save the generated map to this location. If omitted, the map will print to STDOUT instead."
label = "<FILE>"
path = true

[[package.metadata.bashman.options]]
short = "-p"
long = "--prefix"
description = "Set a custom prefix for the IDs of each entry in the map. (IDs look like PREFIX-STEM, where STEM is the alphanumeric portion of the source file name, e.g. 'i-close'.) [default: i]"
label = "<PREFIX>"

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "One or more file and/or directory paths to crunch and/or (recursively) crawl. Only files with the extension .svg will ultimately be included."

[build-dependencies]
argyle = "0.12.*"
dowser = "0.12.*"

[dependencies]
dactyl = "0.10.*"
dowser = "0.12.*"
fyi_msg = "1.8.*"
svg = "=0.18.0"
write_atomic = "0.6.*"

[dependencies.argyle]
version = "0.12.*"
features = [ "try_paths" ]

[profile.release]
lto = true
codegen-units = 1
strip = true
